fix dark mode

--- a/styles/dark-mode.css
+++ b/styles/dark-mode.css
@@ -34,7 +34,3 @@ footer {
 .event-place {
     color: var(--clr-d-secondary);
 }
-
-.h-card {
-    background-color: grey;
-}
